# mlzoomcamp-hw

2024_attempt/hw1/: README.md
2024_attempt/hw2/data/: get_data.sh
2024_attempt/hw5/: README.md  get_model.sh  predict_flask_service.py  run_homework.sh
hw1/: hw1.ipynb  hw1_R.ipynb
hw1/data/: get_data.sh
hw10/: hw10.sh
hw2/: README.md  hw2.ipynb
hw3/: hw3.ipynb
hw4/: hw4.ipynb
hw4/data/: get_data.sh
hw5/: Dockerfile  Pipfile  hw5.sh  predict_score_flask.py  predict_service.py  pyproject.toml  score_client.py
hw6/: hw6.ipynb
hw6/data/: get_data.sh
hw8/: hw8.ipynb
hw9/: Dockerfile  hw9.ipynb  hw9.sh  lambda_function.py  pyproject.toml  test.py
setup/: mlzoomcamp.yaml  requirements.txt  setup_env.sh
